--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,13 @@
+eventlet
 Flask
+Flask-Migrate
+Flask-SocketIO
+Flask-SQLAlchemy
+psycopg2
+pylint
+pylint-flask
+pylint-flask-sqlalchemy
+pytest
 python-dotenv
+requests
+Flask-Session
