--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
@@ -47,7 +49,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.12",
     "@types/react-router-dom": "^5.1.6",
+    "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "eslint": "^7.15.0",
     "eslint-config-airbnb": "^18.2.1",
